# fido-authenticator

./: CHANGELOG.md  Cargo.toml
examples/: usbip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: functional.rs
src/: credential.rs  ctap1.rs  ctap2.rs  dispatch.rs  lib.rs  state.rs
src/ctap2/: credential_management.rs  large_blobs.rs  pin.rs
src/dispatch/: apdu.rs  ctaphid.rs
src/state/: migrate.rs
tests/: cred_mgmt.rs
tests/authenticator/: mod.rs
tests/virt/: dispatch.rs  mod.rs
